Frontend and backend implemented for the quiz game